# YonaCode

./: .gitattributes  .gitignore  .gitignore_private  FAQ_AND_FEEDBACK.md  GPU_MINER_LINUX.md  GPU_MINER_LINUX_EN.md  HIVEOS_FLIGHT_SHEET_GUIDE_EN.md  HIVEOS_L1_COIN_FLIGHT_SHEET_GUIDE_EN.md  HIVEOS_MINER_MANAGEMENT_GUIDE_EN.md  HUONG_DAN_QUAN_LY_MINER_HIVEOS.md  HUONG_DAN_TAO_FLIGHT_SHEET_COIN_L1.md  README.md  TECHNOLOGY_OVERVIEW.md  TECH_OVERVIEW.md  WALLET_SPEC.md  a.py  build_all.bat  build_and_package_all.bat  build_and_run.bat  build_linux.bat  build_linux.sh  build_macos.bat  build_macos.sh  build_tmp.bat  build_windows.bat  calc.py  cli_commands_en.md  cli_commands_vi.md  exchange_api_integration.md  go.mod  go.sum  gpu_driver_guide_en.md  huong_dan_cai_dat_gpu_vi.md  spam_tx.py
.agents/rules/: a.md
.github/workflows/: package_wallet.yml
0_shared_lib/: Cargo.toml  build.rs
0_shared_lib/node/data/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
0_shared_lib/src/: crypto_primitives.rs  difficulty_logic.rs  fee_logic.rs  genz_pow.rs  lib.rs  mempool.rs  merkle.rs  reward_logic.rs  state_manager.rs
0_shared_lib/src/consensus/: mod.rs  reorg.rs
0_shared_lib/src/proto/: block.rs  consensus.rs  mod.rs  network.rs  scl.rs  transaction.rs
0_shared_lib/tests/: consensus_tests.rs  state_manager_tests.rs
10_miner_hiveos/: README.md  h-manifest.conf  h-run.sh  h-stats.sh
1_proto_defs/: buf.gen.yaml  buf.yaml  schema.fbs
1_proto_defs/block/: block.proto
1_proto_defs/common/: common.proto
1_proto_defs/consensus/: consensus.proto  miner.proto
1_proto_defs/network/: network.proto
1_proto_defs/proto_gen/go/: block.pb.go  block_vtproto.pb.go  common.pb.go  common_vtproto.pb.go  consensus.pb.go  consensus_vtproto.pb.go  go.mod  miner.pb.go  miner_grpc.pb.go  miner_vtproto.pb.go  network.pb.go  network_grpc.pb.go  network_vtproto.pb.go  scl_service.pb.go  scl_service_grpc.pb.go  scl_service_vtproto.pb.go  state.pb.go  state_vtproto.pb.go  transaction.pb.go  transaction_vtproto.pb.go
1_proto_defs/scl/: scl_service.proto
1_proto_defs/state/: state.proto
1_proto_defs/transaction/: transaction.proto
2_miner_core/: Cargo.toml  build.rs
2_miner_core/.cargo/: config.toml
2_miner_core/go_bridge/: bridge.go  bridge_unix.go  bridge_windows.go  diagnostics.go  grpc_client.go
2_miner_core/src/: lib.rs  miner_loop.rs
2_miner_core/src/proto/: block.rs  common.rs  mod.rs
5_node_p2p/: ban_manager.go  bitswap_adapter.go  block_sync.go  checkpoints.go  constants.go  crypto_go.go  crypto_go_test.go  discovery.go  discovery_test.go  event_bus.go  gossip_sub_handler.go  header_sync.go  mempool.go  nat_manager.go  network_manager.go  network_manager_test.go  p2p_logger.go  snapshot_manager.go  sync_engine.go
6_user_interface/: cli_app.go  idle_unix.go  idle_windows.go  rpc_server.go  wallet_cli.go
6_user_interface/audit/: audit_logger.go
6_user_interface/cmd/cli_node/: main.go
6_user_interface/cmd/genz/: main.go  mining.go  node.go  query.go  root.go  util.go  wallet.go
6_user_interface/cmd/gpu_installer/: main.go
6_user_interface/i18n/: i18n.go
6_user_interface/internal/: i18n.go  wallet_manager.go
6_user_interface/static/: index.html
6_user_interface/web_ui/: index.html  package-lock.json  package.json
6_user_interface/web_ui/src/: App.tsx  LanguageContext.tsx  api.ts  index.css  translations.ts  utils.ts
7_user_wallet/: capacitor.config.ts  electron-main.cjs  index.html  package-lock.json  package.json  test_js_signing.js
7_user_wallet/android/app/: build.gradle
7_user_wallet/src/: App.tsx  crypto.ts  index.css
8_miner_gpu/: CMakeLists.txt  blake3_pow.cu  httplib.h  main.cpp  test_miner.cpp  yona_pow.cu
8_wallet_gateway/: main.go
9_mining_pool/: payout.go  payout_test.go  pool.go
node2_data/: node_id.key
scratch/: sign_alert.py
yona_hash/: Cargo.toml  README.md
yona_hash/src/: main.rs
(+26 files in other folders)
