[package]
name = "btc_genz_scl"
version = "0.1.0"
edition = "2021"
description = "Shared Calculation Library (SCL) for YonaCode Protocol"

[lib]
name = "btc_genz_scl"
crate-type = ["cdylib", "rlib"]
[[bin]]
name = "scl_server"
path = "src/bin/scl_server.rs"

[[bin]]
name = "genz_miner"
path = "src/bin/genz_miner.rs"

[[bin]]
name = "repair_db"
path = "src/bin/repair_db.rs"

[[bin]]
name = "inspect_db"
path = "src/bin/inspect_db.rs"

[[bin]]
name = "inspect_miner_state"
path = "src/bin/inspect_miner_state.rs"

[[bin]]
name = "scan_accounts_fast"
path = "src/bin/scan_accounts_fast.rs"

[[bin]]
name = "scan_blocks"
path = "src/bin/scan_blocks.rs"

[[bin]]
name = "temp_solver"
path = "src/bin/temp_solver.rs"

[[bin]]
name = "check_daa_history"
path = "src/bin/check_daa_history.rs"

[dependencies]
ahash = "0.8"
libc = "0.2"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
schnorrkel = "0.11"
blake3 = { version = "1.5", features = ["traits-preview"] }
ed25519-dalek = { version = "2.2", features = ["serde", "rand_core", "batch"] }
chacha20poly1305 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.37", features = ["full"] }
lazy_static = "1.4"
rand_chacha = "0.3"
rayon = "1.10"
memmap2 = "0.9"
hex = "0.4"
rs_merkle = { version = "1.4" }
rocksdb = "0.22"
borsh = "0.10.3"
log = "0.4"
jmt = "0.7.0"
flatbuffers = "23.5"
anyhow = "1.0"
chrono = "0.4"
fixed = "1.28.0"
env_logger = "0.11"
serde_json = "1.0"

tempfile = "3.10"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
num-prime = "0.4"
# sp1-prover = { version = "6.0.2", optional = true }
# sp1-core-machine = { version = "6.0.2", optional = true }
prost = "0.12"
prost-types = "0.12"
tonic = "0.11"
tower = "0.4"
ruint = { version = "1.17.2", features = ["rand", "serde"] }
primitive-types = { version = "0.12", features = ["serde"] }
poseidon-rs = "0.0.10"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
prost-build = "0.12"
protoc-bin-vendored = "3.0"
tonic-build = "0.11"

[features]
default = []
enable-sp1 = []
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
