[package]
name = "miner_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "miner_core_v81"
crate-type = ["staticlib", "cdylib"]

[dependencies]
blake3 = "1.5"
ed25519-dalek = "2.1"
hex = "0.4.3"
prost = "0.12"
prost-types = "0.14.3"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
lazy_static = "1.4"
btc_genz_scl = { path = "../0_shared_lib" }
bincode = "1.3"
primitive-types = { version = "0.12", features = ["serde"] }

[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3.0"

[profile.release]
panic = "unwind"
